<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_classes">

    <fragment
        android:id="@+id/nav_classes"
        android:name="com.example.calendarapp.ui.classes.ClassFragment"
        android:label="@string/menu_classes" />

    <fragment
        android:id="@+id/nav_assignments"
        android:name="com.example.calendarapp.ui.assignments.AssignmentFragment"
        android:label="@string/menu_assignments" />

    <fragment
        android:id="@+id/nav_exams"
        android:name="com.example.calendarapp.ui.exams.ExamFragment"
        android:label="@string/menu_exams" />
</navigation>